--- a/src/05-components/_view.scss
+++ b/src/05-components/_view.scss
@@ -21,7 +21,14 @@
 			&:before {
 				content: "";
 				// triangle-top.svg
-				background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpath d='M100,0V100H0Z' fill='%23fff' /%3E%3C/svg%3E%0A");
+				background-image: linear-gradient(
+						to bottom,
+						transparent,
+						transparent calc(100% - 0.3px),
+						color(light) calc(100% - 0.3px),
+						color(light)
+					),
+					url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpath d='M100,0V100H0Z' fill='%23fff' /%3E%3C/svg%3E%0A");
 				bottom: calc(100% - 1px);
 				border-bottom: 1px solid color(light);
 			}
@@ -42,7 +49,14 @@
 				&:after {
 					content: "";
 					// triangle-bottom.svg
-					background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpath d='M0,0H100L0,100Z' fill='%23fff' /%3E%3C/svg%3E%0A");
+					background-image: linear-gradient(
+							to bottom,
+							color(light),
+							color(light) 0.3px,
+							transparent 0.3px,
+							transparent
+						),
+						url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpath d='M0,0H100L0,100Z' fill='%23fff' /%3E%3C/svg%3E%0A");
 					top: calc(100% - 1px);
 					border-top: 1px solid color(light);
 				}
