--- a/src/index.scss
+++ b/src/index.scss
@@ -41,10 +41,13 @@
 		font-weight: $fontWeightRegular;
 		text-rendering: optimizeLegibility;
 		@supports (-moz-appearance: none) {
-			// firefox fix
+			/// firefox fix
+			/// font weight bug
 			-webkit-font-smoothing: antialiased;
 			-moz-osx-font-smoothing: grayscale;
 			font-weight: $fontWeightRegularAlt;
+			/// scroll bug on android
+			overflow: hidden;
 		}
 
 		@media (max-width: $viewportMd) {
@@ -70,6 +73,12 @@
 					pointer-events: none;
 				}
 			}
+			#appex,
+			.x-navX-wrapper.is__main,
+			.x-navX.is__mobile,
+			.x-navX-list.is__aside {
+				will-change: margin;
+			}
 		}
 	}
 
@@ -79,6 +88,14 @@
 		font-size: $fontSize;
 		overflow: hidden;
 		position: static;
+		@supports (-moz-appearance: none) {
+			/// firefox fix
+			/// scroll bug on android
+			width: 100%;
+			height: 100%;
+			overflow-y: auto;
+			overflow-x: hidden;
+		}
 		&:before {
 			transition: all 0.3s ease-out;
 		}
